@@ -1,4 +1,4 @@
-# Newton's method
+# Newton's method and related
 
 SetHelp("NewtonsMethod","equation_solving","Attempt to find a zero of a functionf with derivative df using Newton's method, returning after two successive values are within epsilon or after maxn tries (then returns null)")
 function NewtonsMethod(f,df,guess,epsilon,maxn) = (
@@ -10,6 +10,25 @@ function NewtonsMethod(f,df,guess,epsilon,maxn) = (
 			bailout
 		);
 		guessn := guess - f(guess)/dfg;
+		if |guessn-guess| <= epsilon then
+			return guessn;
+		guess := guessn
+	);
+	null
+)
+
+SetHelp("HalleysMethod","equation_solving","Attempt to find a zero of a functionf with derivative df and second derivative ddf using Halleys's method, returning after two successive values are within epsilon or after maxn tries (then returns null)")
+function HalleysMethod(f,df,ddf,guess,epsilon,maxn) = (
+	guess := float(guess);
+	for n=1 to maxn do (
+		fg = f(guess);
+		dfg = df(guess);
+		denom := 2*dfg^2 - fg*ddf(guess);
+		if denom == 0.0 then (
+			error ("HalleysMethod: division by zero");
+			bailout
+		);
+		guessn := guess - (2*fg*dfg)/denom;
 		if |guessn-guess| <= epsilon then
 			return guessn;
 		guess := guessn
