@@ -1,7 +1,7 @@
 Changes to 1.0.18
 
 * New functions: KroneckerProduct (alias TensorProduct), NewtonsMethod,
-  LambertW, LambertWm1
+  HalleysMethod, LambertW, LambertWm1
 * New PlotCanvasFreeze/PlotCanvasThaw functions to improve flicker
   if doing animations with genius.
 * Allow setting color in LinePlotDrawLine with RGB vector.
