@@ -1,3 +1,11 @@
+Sun Oct 20 23:44:25 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* lib/equation_solving/newton.gel: Add HalleysMethod
+
+	* src/geniustests.txt: do testing
+
+	* help/C/genius.xml: Document Halleys method
+
 Wed Oct 16 08:11:49 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* lib/functions/lambert.gel: slight improvement in speed.
